# zk-lisp

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  README.txt  THIRD_PARTY_NOTICES  deny.toml  readme.txt
.github/workflows/: ci.yml
examples/: enum_fruit.rs  fib-2pow16-log-n.zlisp  fib-2pow16.zlisp  generate_root.rs  hash_chain.rs  hash_lock.rs  hello-zk.zlisp  math2.zlisp  merkle_airdrop_claim.rs  merkle_inclusion.rs  merkle_verify.rs  mini_tx.rs  rollup-bench.zlisp  zk_examle.zlisp
src/: air.rs  backend.rs  commit.rs  debug.rs  error.rs  ir.rs  layout.rs  lib.rs  logging.rs  pi.rs  poseidon.rs  preflight.rs  prove.rs  schedule.rs  utils.rs
src/air/: alu.rs  ctrl.rs  kv.rs  merkle.rs  mixers.rs  mod.rs  poseidon.rs  poseidon_blk.rs  ram.rs  rom.rs  schedule.rs  schedule_blk.rs  vm_alu.rs  vm_ctrl.rs
src/compiler/: builder.rs  ir.rs  lower.rs  metrics.rs  mod.rs
src/lisp/: lexer.rs  lower.rs  mod.rs
src/trace/: kv.rs  mod.rs  poseidon.rs  ram.rs  rom.rs  vm.rs
tests/: arithmetic_select.rs  cli.rs  deftype.rs  divmod.rs  dsl_sugar.rs  gadgets.rs  hash2.rs  if_and_assert.rs  kv_membership.rs  let_and_def.rs  main_entry.rs  merkle.rs  muldiv.rs  mulwide.rs  ram.rs  sponge.rs  stack.rs  str64_bytes32.rs
zk-lisp-cli/: Cargo.toml
zk-lisp-cli/src/: main.rs  prove.rs  repl.rs  run.rs  verify.rs
zk-lisp-cli/tests/: cli.rs
zk-lisp-compiler/: Cargo.toml
zk-lisp-compiler/src/: builder.rs  lib.rs  lower.rs  metrics.rs  schema.rs
zk-lisp-compiler/src/lower/: alu.rs  assert.rs  bits.rs  ctx.rs  hash.rs  hex.rs  iter.rs  merkle.rs  mod.rs  operators.rs  ram.rs  store.rs
zk-lisp-compiler/tests/: assert_negative.rs  bytes32_limits.rs  gadgets_errors.rs  let_and_def_errors.rs  loop_errors.rs  str64_bytes32_limits.rs  type_schemas.rs
zk-lisp-proof/: Cargo.toml
zk-lisp-proof-winterfell/: Cargo.toml
zk-lisp-proof-winterfell/scripts/: degree_mismatch_debug.py
zk-lisp-proof-winterfell/src/: agg_air.rs  agg_child.rs  agg_layout.rs  agg_trace.rs  commit.rs  fs.rs  ivc_air.rs  ivc_layout.rs  ivc_trace.rs  layout.rs  lib.rs  poseidon.rs  poseidon_hasher.rs  preflight.rs  prove.rs  romacc.rs  schedule.rs  segment_planner.rs  utils.rs  zl1.rs  zl_ivc.rs  zl_step.rs
zk-lisp-proof-winterfell/src/agg/: air.rs  child.rs  fs.rs  layout.rs  mod.rs  pi.rs  trace.rs
zk-lisp-proof-winterfell/src/air/: alu.rs  ctrl.rs  merkle.rs  mixers.rs  mod.rs  poseidon.rs  ram.rs  rom.rs  schedule.rs
zk-lisp-proof-winterfell/src/poseidon/: hasher.rs  mod.rs
zk-lisp-proof-winterfell/src/proof/: digest.rs  format.rs  mod.rs  step.rs
zk-lisp-proof-winterfell/src/trace/: mod.rs  poseidon.rs  ram.rs  rom.rs  vm.rs
zk-lisp-proof-winterfell/src/vm/: layout.rs  mod.rs  schedule.rs
zk-lisp-proof-winterfell/src/vm/air/: alu.rs  ctrl.rs  debug.rs  merkle.rs  mixers.rs  mod.rs  poseidon.rs  ram.rs  rom.rs  schedule.rs
zk-lisp-proof-winterfell/src/vm/trace/: mod.rs  poseidon.rs  ram.rs  rom.rs  vm.rs
zk-lisp-proof-winterfell/tests/: agg_basic.rs  agg_child.rs  agg_multiseg.rs  arithmetic_select.rs  bytes32.rs  deftype.rs  deg_smoke.rs  divmod.rs  dsl_sugar.rs  fs_replay.rs  gadgets.rs  hash2.rs  if_and_assert.rs  ivc_basic.rs  ivc_multi.rs  let_and_def.rs  loop_integration.rs  main_args_pi.rs  merkle.rs  muldiv.rs  mulwide.rs  ram.rs  recursion_basic.rs  recursion_multi.rs  recursion_single.rs  rollup_bench_ram.rs  rollup_bench_ram_regression.rs  rollup_bench_recursion.rs  sponge.rs  stack.rs  step_serialization.rs  str64_bytes32.rs  transcript_basic.rs  verify_fast.rs  vm_args.rs
zk-lisp-proof/src/: error.rs  frontend.rs  ivc.rs  lib.rs  pi.rs  recursion.rs  segment.rs
zk-lisp-utils/: Cargo.toml
zk-lisp-utils/src/: lib.rs
