[package]
name = "zk-lisp"
version = "0.6.0"
edition = "2024"

[dependencies]
winterfell = "0.13.1"
thiserror = "2"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[[bin]]
name = "zk-lisp"
path = "src/bin/zk-lisp.rs"
