[workspace]
resolver = "1"
members = [
    "zk-lisp-compiler",
    "zk-lisp-proof",
    "zk-lisp-proof-winterfell",
    "zk-lisp-cli",
    "zk-lisp-utils",
]

[workspace.package]
name = "zk-lisp"
license = "AGPL-3.0-or-later"
version = "0.11.0"
edition = "2024"

[workspace.dependencies]
winterfell = "0.13.1"
thiserror = "2"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
arrayvec = "0.7"
rustyline = "17"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
