[workspace]
resolver = "1"
members = [
    "zk-lisp-compiler",
    "zk-lisp-proof",
    "zk-lisp-proof-winterfell",
    "zk-lisp-cli",
    "zk-lisp-utils",
]

[workspace.package]
license = "AGPL-3.0-or-later"
version = "0.12.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2"
blake3 = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = "4.5"
hex = "0.4"
base64 = "0.22"
serde = "1"
serde_json = "1"
comfy-table = "7"
arrayvec = "0.7"
rustyline = "17"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rayon = "1.10"
