[package]
name = "zk-lisp-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
zk-lisp-compiler = { path = "../zk-lisp-compiler" }
zk-lisp-proof = { path = "../zk-lisp-proof" }
zk-lisp-proof-winterfell = { path = "../zk-lisp-proof-winterfell" }
thiserror = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustyline = { workspace = true }
winterfell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
